[metadata]
name = colcon-mixin
version = attr: colcon_mixin.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-mixin/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/colcon/colcon-mixin/
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to read CLI mixins from files.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  colcon-core>=0.5.6
  PyYAML
packages = find:
zip_safe = true

[options.extras_require]
test =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2

[tool:pytest]
filterwarnings =
    error
    # Suppress deprecation warnings in other packages
    ignore:lib2to3 package is deprecated::scspell
    ignore:SelectableGroups dict interface is deprecated::flake8
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated::pyreadline
junit_suite_name = colcon-mixin

[options.entry_points]
colcon_core.argument_parser =
    mixin = colcon_mixin.mixin.mixin_argument:MixinArgumentParserDecorator
colcon_core.environment_variable =
    mixin_path = colcon_mixin.mixin:COLCON_MIXIN_PATH
colcon_core.extension_point =
    colcon_mixin.subverb = colcon_mixin.subverb:MixinSubverbExtensionPoint
colcon_core.verb =
    mixin = colcon_mixin.verb.mixin:MixinVerb
colcon_mixin.subverb =
    add = colcon_mixin.subverb.add:AddMixinSubverb
    list = colcon_mixin.subverb.list:ListMixinSubverb
    remove = colcon_mixin.subverb.remove:RemoveMixinSubverb
    show = colcon_mixin.subverb.show:ShowMixinSubverb
    update = colcon_mixin.subverb.update:UpdateMixinSubverb

[flake8]
import-order-style = google

[coverage:run]
source = colcon_mixin
